--- a/contoh_tugas.html
+++ b/contoh_tugas.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, Barok Pendikom</h1>
+    <h1>Hello, Barok Pendikom Kelas A</h1>
 </body>
 </html>
